--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -806,7 +806,7 @@ $-colors-map: map-merge(
 
   /*
   *   Height sizes
-  *   Example: -md-h-hover-50px (height: 50px), -h-100px-hover (height: 100px on mouse hover)
+  *   Example: -md-h-50px-hover (height: 50px), -h-100px-hover (height: 100px on mouse hover)
   *   Values: zero, 1 to 10, 1, 2px, 3px, 5px, 7px, 10px, 15px, 20px, 25px, 30px, 35px,
   *   40px, 45px, 50px, 60px, 70px, 80px, 90px, 100px, 120px, 140px, 160px, 180px, 200px,
   *   250px, 300px, 350px, 400px, 450px, 500px, sm, md, lg, xl, xxl
@@ -817,7 +817,7 @@ $-colors-map: map-merge(
   }
   /*
   *   Width sizes
-  *   Example: -md-w-hover-50px (width: 50px), -w-100px-hover (width: 100px on mouse hover)
+  *   Example: -md-w-50px-hover (width: 50px), -w-100px-hover (width: 100px on mouse hover)
   *   Values: zero, 1 to 10, 1, 2px, 3px, 5px, 7px, 10px, 15px, 20px, 25px, 30px, 35px,
   *   40px, 45px, 50px, 60px, 70px, 80px, 90px, 100px, 120px, 140px, 160px, 180px, 200px,
   *   250px, 300px, 350px, 400px, 450px, 500px, sm, md, lg, xl, xxl
@@ -828,7 +828,7 @@ $-colors-map: map-merge(
   }
   /*
   *   The `max-width` property sizes
-  *   Example: -md-mw-hover-50px (width: 50px), -mw-100px-hover (width: 100px on mouse hover)
+  *   Example: -md-mw-50px-hover (width: 50px), -mw-100px-hover (width: 100px on mouse hover)
   *   Values: zero, 1 to 10, 1, 2px, 3px, 5px, 7px, 10px, 15px, 20px, 25px, 30px, 35px,
   *   40px, 45px, 50px, 60px, 70px, 80px, 90px, 100px, 120px, 140px, 160px, 180px, 200px,
   *   250px, 300px, 350px, 400px, 450px, 500px, sm, md, lg, xl, xxl
