Add the `dash.min.css.gz` file

--- a/src/config.scss
+++ b/src/config.scss
@@ -4,7 +4,7 @@
 //   A simple, lite-weight and powerful CSS framework
 //   version: 0.5.0
 
-// ------ Prefix and postfix ------
+// ------ Prefix ------
 $-prefix: "-";
 
 // ------ Color variables ------
